# backend-master/app.js
@@ -7,7 +7,7 @@ const productosRoutes = require('./routes/productos');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./swagger_output.json');
 const insumosRoutes = require('./routes/insumos');
-const ordenesRoutes = require('./routes/ordenes');
+const orderRoutes = require('./routes/order');
 const cartRoutes = require('./routes/cart');
 const app = express();
 const port = 3000;
@@ -22,8 +22,8 @@ app.use('/hospitales', hospitalesRoutes);
 app.use('/usuarios', usuariosRoutes);
 app.use('/productos', productosRoutes);
 app.use('/insumos', insumosRoutes);
-app.use('/ordenes', ordenesRoutes);
 app.use('/carrito', cartRoutes);
+app.use('/orders', orderRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 app.get('/', (req, res) => {
