# backend-master/routes/ordenes.js
@@ -1,52 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const ordenesController = require('../controllers/ordenesController');
-const { verifyToken, isAdmin, isUser } = require('../middleware/auth');
-
-router.get('/', verifyToken, isUser, (req, res) => {
-  /* #swagger.summary = 'Obtiene la lista de ordenes' */
-  /* #swagger.tags = ['Ordenes'] */
-  ordenesController.getOrdenes(req, res);
-});
-
-router.get('/:id', verifyToken, isAdmin, (req, res) => {
-  /* #swagger.summary = 'Obtiene un orden por ID' */
-  /* #swagger.tags = ['Ordenes'] */
-  /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
-  ordenesController.getOrdenById(req, res);
-});
-
-router.post('/', verifyToken, isAdmin, (req, res) => {
-  /* #swagger.summary = 'Agrega un nuevo orden' */
-  /* #swagger.tags = ['Ordenes'] */
-  /* #swagger.security = [{ "BearerAuth": [] }] */
-  /* #swagger.parameters['body'] = {
-        in: 'body',
-        description: 'Add new product.',
-        schema: { $ref: '#/definitions/Orden' }
-    } */
-  ordenesController.createOrden(req, res);
-});
-
-router.put('/:id', verifyToken, isAdmin, (req, res) => {
-  /* #swagger.summary = 'Actualiza un orden existente' */
-  /* #swagger.tags = ['Ordenes'] */
-  /* #swagger.security = [{ "BearerAuth": [] }] */
-  /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
-  /* #swagger.parameters['body'] = {
-        in: 'body',
-        description: 'Update product.',
-        schema: { $ref: '#/definitions/Orden' }
-    } */
-  ordenesController.updateOrden(req, res);
-});
-
-router.delete('/:id', verifyToken, isAdmin, (req, res) => {
-  /* #swagger.summary = 'Elimina un orden' */
-  /* #swagger.tags = ['Ordenes'] */
-  /* #swagger.security = [{ "BearerAuth": [] }] */
-  /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
-  ordenesController.deleteOrden(req, res);
-});
-
-module.exports = router;
